--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : ""
   email       : "liuxw24@m.fudan.edu.com"
   bio         : ""
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "lxw.jpg"
   twitter     : ""
   google_plus : ""
 
